Fix for clashes reporting per warning: too long strings for db (and tooltip)